@@ -27,7 +27,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Singleton
 @Requires(env = {Environments.LOCAL, Environment.TEST})
@@ -77,10 +76,10 @@ public class LocalUserPasswordAuthProvider implements ReactiveAuthenticationProv
         }
 
         List<Permission> permissions = rolePermissionServices.findUserPermissions(memberProfile.getId());
-        List<String> permissionsAsString = permissions.stream().map(Enum::name).collect(Collectors.toList());
+        List<String> permissionsAsString = permissions.stream().map(Enum::name).toList();
 
         Set<Role> userRoles = roleServices.findUserRoles(memberProfile.getId());
-        List<String> rolesAsString = userRoles.stream().map(Role::getRole).collect(Collectors.toList());
+        List<String> rolesAsString = userRoles.stream().map(Role::getRole).toList();
 
         Map<String, Object> attributes = new HashMap<>();
         attributes.put("roles", rolesAsString);
