@@ -10,7 +10,6 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Singleton
 public class BirthDayServicesImpl implements BirthDayServices{
@@ -30,14 +29,14 @@ public class BirthDayServicesImpl implements BirthDayServices{
         }
 
         Set<MemberProfile> memberProfiles = memberProfileServices.findByValues(null, null, null, null, null, null, false);
-        List<MemberProfile> memberProfileAll = memberProfiles.stream().collect(Collectors.toList());
+        List<MemberProfile> memberProfileAll = new ArrayList<>(memberProfiles);
         if (months != null) {
             for (String month : months) {
                 if (month != null) {
                     memberProfileAll = memberProfileAll
                             .stream()
                             .filter(member -> member.getBirthDate() != null && month.equalsIgnoreCase(member.getBirthDate().getMonth().name()) && member.getTerminationDate() == null)
-                            .collect(Collectors.toList());
+                            .toList();
                 }
             }
         }
@@ -47,13 +46,14 @@ public class BirthDayServicesImpl implements BirthDayServices{
                     memberProfileAll = memberProfiles
                             .stream()
                             .filter(member -> member.getBirthDate() != null && day.equals(member.getBirthDate().getDayOfMonth()) && member.getTerminationDate() == null)
-                            .collect(Collectors.toList());
+                            .toList();
                 }
             }
         }
 
         return profileToBirthDateResponseDto(memberProfileAll);
     }
+
     @Override
     public List<BirthDayResponseDTO> getTodaysBirthdays() {
         Set<MemberProfile> memberProfiles = memberProfileServices.findByValues(null, null, null, null, null, null, false);
@@ -61,7 +61,7 @@ public class BirthDayServicesImpl implements BirthDayServices{
         List<MemberProfile> results = memberProfiles
                 .stream()
                 .filter(member -> member.getBirthDate() != null && today.getMonthValue() == member.getBirthDate().getMonthValue())
-                .collect(Collectors.toList());
+                .toList();
         return profileToBirthDateResponseDto(results);
     }
 
